--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactchatapplication",
+  "name": "videosdk-rtc-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,8 @@
     "@videosdk.live/react-sdk": "^0.1.42",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-player": "^2.10.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
