--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@videosdk.live/react-sdk": "^0.1.42",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-player": "^2.10.1",
