--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "videosdk-rtc-react-prebuilt-ui",
+  "name": "reactchatapplication",
   "version": "0.3.16",
   "private": true,
-  "homepage": "https://embed.videosdk.live/rtc-js-prebuilt/0.3.16/",
+  "homepage": "https://www.gosee.expert/reactchatapplication/build",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
