--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+  }, 
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "globals": {
+      "window": true,
+      "ActiveXObject": true
+    }
   },
   "browserslist": {
     "production": [
