--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "react-virtualized": "^9.22.3",
     "react-visibility-sensor": "^5.1.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-timers": "^7.0.63"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  }, 
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
